@@ -13,7 +13,14 @@ message=/install/powermac/boot.msg
 image=/install/powermac/netboot-linux
 	label=install
 	initrd=/install/powermac/netboot-initrd.gz
-	append=""
+	append="devfs=mount,dall"
+	initrd-size=8192
+	read-only
+
+image=/install/powermac/netboot-linux
+	label=expert
+	initrd=/install/powermac/netboot-initrd.gz
+	append="DEBCONF_PRIORITY=low devfs=mount,dall"
 	initrd-size=8192
 	read-only
 
@@ -22,5 +29,12 @@ image=/install/powermac/netboot-linux
 	label=install-safe
 	initrd=/install/powermac/netboot-initrd.gz
 	initrd-size=8192
-	append="video=ofonly"
+	append="devfs=mount,dall video=ofonly"
+	read-only
+
+image=/install/powermac/netboot-linux
+	label=expert-safe
+	initrd=/install/powermac/netboot-initrd.gz
+	initrd-size=8192
+	append="DEBCONF_PRIORITY=low devfs=mount,dall video=ofonly"
 	read-only
